--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <link rel = "stylesheet" type = "text/css" href = "stylesheet.css" />
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="http:///ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+<script type="text/javascript" src="javas.js"></script>
+ <title>Co-working</title>
 </head>
 <body>
-  
+  <div id="bg"></div>
+<h2>Kiran Murthy JD</h2>
+<section>
+  <nav>
+    <div></div>
+    <ul>
+      <li data-xcoord="0px" class="active">About</li>
+      <li data-xcoord="160px">Portfolio</li>
+      <li data-xcoord="320px">Contact</li>
+      <li data-xcoord="480px">Store</li>
+    </ul>
+  </nav>
+</section>
 </body>
 </html>
