--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
  <title>Co-working</title>
 </head>
 <body>
-  <div id="bg"></div>
-<h2>Kiran Murthy JD</h2>
+  <header>
 <section>
   <nav>
     <div> </div>
     <ul>
-      <li data-xcoord="0px" class="active">About</li>
+      <li data-xcoord="0px">About</li>
       <li data-xcoord="160px">Portfolio</li>
       <li data-xcoord="320px">Contact</li>
       <li data-xcoord="480px">Store</li>
     </ul>
   </nav>
 </section>
+  </header>
+
+
 </body>
 </html>
